# Flust

./: .gitignore  Cargo.toml  History.md  README.md  build.rs  flust_results.csv
.cargo/: config.toml
src/: algorithms.rs  charts.rs  common.rs  compute_worker.rs  economics.rs  economics_export.rs  economics_ui.rs  fluids.rs  interactive.rs  io.rs  kinematics.rs  kinematics_export.rs  kinematics_ui.rs  main.rs  matrix.rs  mhps.rs  mhps_export.rs  mhps_ui.rs  monitor.rs  numerics.rs  selftest.rs  simd_core.rs  sparse.rs  system.rs  system_profiler.rs  thermal.rs  thermal_export.rs  thermal_ui.rs  vision.rs  vision_export.rs  vision_ui.rs
